--- a/PRACT/src/main/resources/templates/test.html
+++ b/PRACT/src/main/resources/templates/test.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <html>
  <body>
-  <p>Гайнцев алексей Икбо-16-19 8вариант</p>
+  <p>Постнов Никита Икбо-16-19 8вариант</p>
  </body>
 </html>
